# cuddly-guacamole

./: pyproject.toml
ml-p1/: README.md  __init__.py  __main__.py  environment.yaml  functions.py  main.py  part_b.py  part_c.py  part_f.py  part_g.py  plot.py  utils.py
ml-p1/ml_p1/: __main__.py  functions.py  part_a.py  part_b.py  part_c.py  part_e.py  part_f.py  part_g.py  plot.py  utils.py
ml-p1/ml_p1/notebooks/: part_bb.ipynb  part_c.ipynb  part_e.ipynb
ml-p1/notebooks/: part_a.ipynb  part_aa.ipynb  part_b.ipynb  part_d.ipynb  part_f.ipynb  part_g.ipynb  part_g_e.ipynb
